[UPDATE]解决JDK高版本工具类报错问题